Update project content and fix auto layout issue on mobile devices.

--- a/css/component.css
+++ b/css/component.css
@@ -218,7 +218,7 @@ html.js,
 	font-family: helvetica, arial, tahoma, verdana;
 	line-height: 20px;
 	font-size: 14px;
-	color: #726f77;
+	color: rgb(238, 233, 220);
 }
 
 .js .project *:before, *:after{
@@ -261,7 +261,10 @@ html.js,
 
 .js .project .project-name {
 	text-align: center;
-	color: white;
+	color: rgb(102, 204, 153);
+	letter-spacing: 2px;
+	text-transform: uppercase;
+	text-shadow: 3px 3px #ff0000;
 	font-size: 50px;
 	padding-bottom: 50px;
 }
@@ -316,7 +319,7 @@ html.js,
   content: "";
   width: 3px;
   height: 100%;
-  background: #66CC99;
+  background: rgb(224, 175, 66, 50%);
   left: 50%;
   top: 0;
   position: absolute;
@@ -333,7 +336,8 @@ html.js,
   position: relative;
 }
 .js .project #timeline .timeline-item .timeline-icon {
-  background: #66CC99;
+  background: rgb(224, 175, 66);
+  ;
   width: 60px;
   height: 60px;
   position: absolute;
@@ -353,7 +357,7 @@ html.js,
 }
 .js .project #timeline .timeline-item .timeline-content {
   width: 45%;
-  background: #fff;
+  background: rgb(29 30 33 / 60%);
   padding: 20px;
   -webkit-box-shadow: 0 3px 0 rgba(0, 0, 0, 0.1);
   -moz-box-shadow: 0 3px 0 rgba(0, 0, 0, 0.1);
@@ -370,7 +374,7 @@ html.js,
 }
 .js .project #timeline .timeline-item .timeline-content h2 {
   padding: 15px;
-  background: #66CC99;
+  background: rgb(102, 204, 153, 50%);
   color: white;
   margin: -20px -20px 0 -20px;
   font-weight: bold;
@@ -414,7 +418,7 @@ html.js,
   height: 0;
   border-top: 7px solid transparent;
   border-bottom: 7px solid transparent;
-  border-left: 7px solid #66CC99;
+  border-left: 7px solid rgb(102, 204, 153, 50%);
 }
 .js .project #timeline .timeline-item .timeline-content.right {
   float: right;
@@ -424,14 +428,14 @@ html.js,
   right: 45%;
   left: inherit;
   border-left: 0;
-  border-right: 7px solid #66CC99;
+  border-right: 7px solid rgb(102, 204, 153, 50%);
 }
 .js .project .btn {
   padding: 5px 15px;
   text-decoration: none;
   background: transparent;
-  border: 2px solid rgba(114, 111, 119, 0.7);
-  color: rgba(114, 111, 119, 1);
+  border: 2px solid rgba(238, 233, 220, 0.7);
+  color: rgb(238, 233, 220);;
   display: inline-block;
   position: relative;
   text-transform: uppercase;
@@ -484,11 +488,12 @@ html.js,
     width: 90%;
     float: right;
   }
-  .js .project #timeline .timeline-item .timeline-content:before, #timeline .timeline-item .timeline-content.right:before {
+
+  .js .project #timeline .timeline-item .timeline-content:before, .js .project #timeline .timeline-item .timeline-content.right:before {
     left: 10%;
     margin-left: -6px;
     border-left: 0;
-    border-right: 7px solid #66CC99;
+    border-right: 7px solid rgb(102, 204, 153, 50%);
   }
   .js .project #timeline .timeline-item .timeline-icon {
     left: 0;
@@ -665,6 +670,13 @@ html.js,
 		top: 15px;
 		right: 10px;
 		left: auto;
+		display: block;
+	}
+	.header-not-at-top {
+		background-color: lightBlue;
+		display: table;
+		margin: 0 auto;
+		margin-top: 200px;
 	}
 
 	.language-nav nav .drop-down {
